--- a/Languages/ChineseTraditional/DefInjected/ThingDef/Things.xml
+++ b/Languages/ChineseTraditional/DefInjected/ThingDef/Things.xml
@@ -6,14 +6,18 @@
   <!--EN: A desk to study and research technologies. Comes with all your faction's starting research.-->
   <StudyDesk.description>一張可用於學習和研究的桌子。自帶所有開局科技（殖民者可以直接在書桌上學習它們而不需要額外寫書）。</StudyDesk.description>
 
-
-  <!-- Borrowed from Jecrell's RimWriter -->
+  <!--NEW-->
+  <NetworkTerminal.label>Network Terminal</NetworkTerminal.label>
+  <NetworkTerminal.description>An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
   <BookShelf.label>書架</BookShelf.label>
   <!--EN: A sturdy shelf for storing knowledge in form of books.-->
   <BookShelf.description>一個堅固的架子，用於存放記載知識的書本。</BookShelf.description>
-
+  
+  <!--NEW-->
+  <NetworkServer.label>Network Server</NetworkServer.label>
+  <NetworkServer.description>The ultimate cloud storage unit to host your research database. All library space you'll ever need.</NetworkServer.description>
 
   <!-- Technical Book -->
 
@@ -25,9 +29,10 @@
   <!--EN: A book filled with knowledge.-->
   <TechBook.description>一本充滿知識的書。</TechBook.description>
 
-
-  <!-- Borrewed from ItchyFlea's Practise Target -->
-
+  <!--NEW-->
+  <TechDrive.label>Technology Database Drive</TechDrive.label>
+  <TechDrive.description>A hard drive filled with knowledge. Can only be archived on a network terminal.</TechDrive.description>
+  
   <!--EN: Target Stand-->
   <Target.label>靶子</Target.label>
   <!--EN: A target for your sharpshooters to hone their skills with.-->
