--- a/Languages/ChineseSimplified/DefInjected/ThingDef/Things.xml
+++ b/Languages/ChineseSimplified/DefInjected/ThingDef/Things.xml
@@ -5,15 +5,19 @@
   <StudyDesk.label>书桌</StudyDesk.label>
   <!--EN: A desk to study and research technologies. Comes with all your faction's starting research.-->
   <StudyDesk.description>一张可用于学习和研究的桌子。自带所有开局科技（殖民者可以直接在书桌上学习它们而不需要额外写书）。</StudyDesk.description>
-
-
-  <!-- Borrowed from Jecrell's RimWriter -->
+  
+  <!--NEW-->
+  <NetworkTerminal.label>Network Terminal</NetworkTerminal.label>
+  <NetworkTerminal.description>An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
   <BookShelf.label>书架</BookShelf.label>
   <!--EN: A sturdy shelf for storing knowledge in form of books.-->
   <BookShelf.description>一个坚固的架子，用于存放记载知识的书本。</BookShelf.description>
 
+  <!--NEW-->
+  <NetworkServer.label>Network Server</NetworkServer.label>
+  <NetworkServer.description>The ultimate cloud storage unit to host your research database. All library space you'll ever need.</NetworkServer.description>
 
   <!-- Technical Book -->
 
@@ -25,8 +29,9 @@
   <!--EN: A book filled with knowledge.-->
   <TechBook.description>一本充满知识的书。</TechBook.description>
 
-
-  <!-- Borrewed from ItchyFlea's Practise Target -->
+  <!--NEW-->
+  <TechDrive.label>Technology Database Drive</TechDrive.label>
+  <TechDrive.description>A hard drive filled with knowledge. Can only be archived on a network terminal.</TechDrive.description>
 
   <!--EN: Target Stand-->
   <Target.label>靶子</Target.label>
