--- a/Languages/ChineseTraditional/DefInjected/JobDef/Jobs.xml
+++ b/Languages/ChineseTraditional/DefInjected/JobDef/Jobs.xml
@@ -5,12 +5,13 @@
   <LearnTech.reportString>正在學習</LearnTech.reportString>
   <!--EN: documenting-->
   <DocumentTech.reportString>正在記錄</DocumentTech.reportString>
+  <DocumentTechDigital.reportString>正在記錄</DocumentTechDigital.reportString>
   <!--EN: researching-->
   <ResearchTech.reportString>正在研究</ResearchTech.reportString>
+  <!--NEW-->
+  <ScanBook.reportString>scanning</ScanBook.reportString>
   <!--EN: training weapon-->
   <TrainWeapon.reportString>正在練習使用武器</TrainWeapon.reportString>
-  
-  <!--From ItchyFlea's Practise Target-->
   <!--EN: Training Melee.-->
   <PlayAtDummy.reportString>正在練習使用近戰武器。</PlayAtDummy.reportString>
   <!--EN: Training Shooting.-->
