--- a/Languages/ChineseTraditional/DefInjected/StuffCategoryDef/StuffCategories.xml
+++ b/Languages/ChineseTraditional/DefInjected/StuffCategoryDef/StuffCategories.xml
@@ -1,8 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
-  <!--EN: technic-->
-  <Technic.label>技術</Technic.label>
-
+  
+  <!--EN: neolithic-->
+  <Neolithic.label>石器時代</Neolithic.label>
+  <!--EN: medieval-->
+  <Medieval.label>中世紀</Medieval.label>
+  <!--EN: industrial-->
+  <Industrial.label>工業時代</Industrial.label>
+  <!--EN: spacer-->
+  <Spacer.label>太空時代</Spacer.label>
+  <!--EN: ultra-->
+  <Ultra.label>極致時代</Ultra.label>
+  <!--EN: archotech-->
+  <Archotech.label>遠古科技</Archotech.label>
 
 </LanguageData>
