--- a/Languages/French/DefInjected/ThingDef/Things.xml
+++ b/Languages/French/DefInjected/ThingDef/Things.xml
@@ -6,16 +6,22 @@
   <!--EN: A desk to study and research technologies. Comes with all your faction's starting research.-->
   <StudyDesk.description>Un bureau pour étudier et rechercher les technologies. Pré-équipé avec toutes les recherches de départ de votre faction.</StudyDesk.description>
 
-
-  <!-- Borrowed from Jecrell's RimWriter -->
+  <!--NEW-->
+  <NetworkTerminal.label>Network Terminal</NetworkTerminal.label>
+  <NetworkTerminal.description>An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
   <BookShelf.label>Bibliothèque</BookShelf.label>
   <!--EN: A sturdy shelf for storing knowledge in form of books.-->
   <BookShelf.description>Une étagère solide pour y ranger des connaissances sous forme de livres.</BookShelf.description>
 
+  <!--NEW-->
+  <NetworkServer.label>Network Server</NetworkServer.label>
+  <NetworkServer.description>The ultimate cloud storage unit to host your research database. All library space you'll ever need.</NetworkServer.description>
 
-  <!-- Technical Book -->
+  <!--NEW-->
+  <TechDrive.label>Technology Database Drive</TechDrive.label>
+  <TechDrive.description>A hard drive filled with knowledge. Can only be archived on a network terminal.</TechDrive.description>
 
   <!--EN: Unfinished technical book-->
   <UnfinishedTechBook.label>Livre technique inachevé</UnfinishedTechBook.label>
