--- a/Languages/Japanese/DefInjected/ThingDef/Things.xml
+++ b/Languages/Japanese/DefInjected/ThingDef/Things.xml
@@ -6,14 +6,18 @@
   <!--EN: A desk to study and research technologies. Comes with all your faction's starting research.-->
   <StudyDesk.description>学習と研究をするための机。全ての初期テクノロジーを内蔵しています。</StudyDesk.description>
 
-
-  <!-- Borrowed from Jecrell's RimWriter -->
+  <!--NEW-->
+  <NetworkTerminal.label>Network Terminal</NetworkTerminal.label>
+  <NetworkTerminal.description>An access point to input and output knowledge between colonists and the research database. Comes with solitaire pre-installed.</NetworkTerminal.description>
 
   <!--EN: Book Shelf-->
   <BookShelf.label>本棚</BookShelf.label>
   <!--EN: A sturdy shelf for storing knowledge in form of books.-->
   <BookShelf.description>丈夫な棚。本の形にされた知識を収納します。</BookShelf.description>
 
+  <!--NEW-->
+  <NetworkServer.label>Network Server</NetworkServer.label>
+  <NetworkServer.description>The ultimate cloud storage unit to host your research database. All library space you'll ever need.</NetworkServer.description>
 
   <!-- Technical Book -->
 
@@ -25,8 +29,9 @@
   <!--EN: A book filled with knowledge.-->
   <TechBook.description>知識に満ちた本。</TechBook.description>
 
-
-  <!-- Borrewed from ItchyFlea's Practise Target -->
+  <!--NEW-->
+  <TechDrive.label>Technology Database Drive</TechDrive.label>
+  <TechDrive.description>A hard drive filled with knowledge. Can only be archived on a network terminal.</TechDrive.description>
 
   <!--EN: Target Stand-->
   <Target.label>標的</Target.label>
